better date format in forms

--- a/app/translations/messages.fr.yml
+++ b/app/translations/messages.fr.yml
@@ -4,3 +4,4 @@ form:
       model_dreal: "Modèle DREAL"
       model_meac: "Rapports MEAC3000 (Sick)"
       model_wex: "Rapports WEX (Envea)"
+    date_format: 'jj/mm/aaaa'
